--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "evaluating-a-number-game",
-  "version": "1.0.0",
+  "name": "@ra5243/evaluating-a-number-game",
+  "version": "1.0.1",
   "description": "ASSINGMENT 1.2",
   "main": "index.js",
   "type": "module",
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ra5243/evaluating-a-number-game": "^1.0.1",
     "inquirer": "^9.2.20"
   },
   "devDependencies": {
